# learn-bird

./: .gitignore  main.py  pyproject.toml
exp_result/turbo_output/: predict_dev.json
origin_bird/: evaluation.py  evaluation_ves.py  gpt_request.py  post_process_cot.py
src/: evaluation.py  request.py  run.py
src/prompt/: bird.py
src/util/: db.py  llm.py
