[project]
name = "bird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "func-timeout>=4.3.5",
    "openai>=1.99.5",
    "pandas>=2.3.1",
    "sqlparse>=0.5.3",
]

[tool.ruff]
# 要扫描的路径（可以是 src, tests 等）
src = ["src"]
# 是否自动修复（等同于 --fix）
fix = true
# 最大行长度（和 black 一致，方便配合使用）
line-length = 88
# Python 版本（影响 Ruff 规则）
target-version = "py311"

# 选择启用的规则集合
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort（导入排序）
    "UP",  # pyupgrade（升级到现代语法）
    "C90", # mccabe（复杂度检查）
]

# 忽略特定规则
lint.ignore = [
    "E501",  # 忽略超长行（交给 black 处理）
]
# 排除不检查的路径
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "migrations",
]

# 最大函数复杂度
[tool.ruff.lint.mccabe]
max-complexity = 10

# isort 相关设置
[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true